# data_connection

./: .dockerignore  .env  .gitignore  Dockerfile.base  README.md  data_connection.code-workspace  data_exhange.code-workspace  datapoints.code-workspace  docker-bake.hcl  docker-compose.yml  main_test.py  obsidian.py  oee.sketch  pyproject.toml  todo.md
.obsidian/: app.json  community-plugins.json  workspace.json
data_connection/: .flake8  pyproject.toml
data_connection/data_connection/: __init__.py  abstract_side.py  datapoint.py  field.py  reader_side.py  writer_side.py
data_connection/data_connection/readers/: mbtcp_client.py  mtcp_client.py  opcua_client.py
data_connection/tests/: model_pickle_test.py
data_connector/: __init__.py  channel.py  channel_opcua_client.py  datapoint.py  main.py  signals.py
data_connector/utils/: logger.py
data_exchange/: .flake8  README.md  main_test.py  pyproject.toml
data_exchange/data_exchange/: abstract_side.py  datapoint.py  main.py  reader_side.py  writer_side.py
datapoints/: channel_opcua_client.py  pyproject.toml
datapoints/datapoints/: test.py
datapoints/docs/.obsidian/: workspace
docs/: todo.md
test/mbtcp_client/: README.md
test/mbtcp_client/reader_side/: Dockerfile  pyproject.toml
test/mbtcp_client/writer_side/: Dockerfile  pyproject.toml
test/opcua_client/: README.md  uaexpert.uap
test/opcua_client/test_reader_side/: Dockerfile  pyproject.toml
test/opcua_client/test_reader_side/test_reader_side/: api.py  data.py  main.py  schemas.py
test/opcua_client/test_writer_side/: Dockerfile  pyproject.toml
test/opcua_client/test_writer_side/test_writer_side/: api.py  data.py  debugger.py  main.py
test/tia17/: data_connection_20221110_1620.zap17
test_reader_side/: README.md  pyproject.toml
test_reader_side/test_reader_side/: __init__.py  api.py  data.py  main.py  schemas.py
test_writer_side/: .flake8  pyproject.toml
test_writer_side/test_writer_side/: api.py  data.py  logger.py  main.py
